--- a/src/components/QuoteBox/QuoteBox.module.css
+++ b/src/components/QuoteBox/QuoteBox.module.css
@@ -34,3 +34,32 @@
   display: flex;
   gap: 5px;
 }
+
+@media (min-width: 501px) and (max-width: 700px) {
+  .quoteBox {
+    width: 450px;
+  }
+
+  .quoteBox h1 {
+    font-size: 1.75rem;
+  }
+}
+
+@media (min-width: 300px) and (max-width: 500px) {
+  .quoteBox {
+    width: 300px;
+    margin: 10px 10px;
+  }
+
+  .quoteBox h1 {
+    font-size: 1.5rem;
+  }
+
+  .features {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+}
